feat: alugar livros
Agora a classe dos clientes tem um atributo que corresponde ao título do livro que o cliente alugou. Esse atributo também é gravado e lido no arquivo .csv dos clientes. Agora também existe uma função onde um cliente pode alugar um livro específico dentre os disponíveis no catálogo.
Também foram adicionadas funções pra facilitar a gravação "dinâmica" de dados nos arquivos .csv, além de mudanças em funções semelhantes que já existiam.
Fiquei doido no processo.